# cpp_otus

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md  README.md  annotated.html  application__specific_8h_source.html  async_8h.html  async_8h_source.html  bulk_2interface_8h.html  bulk_2interface_8h_source.html  classcore_1_1fake__heap__debugger__t-members.html  classcore_1_1fake__heap__debugger__t.html  classcore_1_1fake__heap__t-members.html  classcore_1_1fake__heap__t.html  classcore_1_1fake__realloc__heap__t-members.html  classcore_1_1fake__realloc__heap__t.html  classcore_1_1matrix__t-members.html  classcore_1_1matrix__t.html  classcore_1_1matrix__t_3_01T_00_01__Value_00_01__Alloc_00_011_01_4-members.html  classcore_1_1matrix__t_3_01T_00_01__Value_00_01__Alloc_00_011_01_4.html  classcore_1_1ringbuffer__iterator__t-members.html  classcore_1_1ringbuffer__iterator__t.html  classcore_1_1ringbuffer__t-members.html  classcore_1_1ringbuffer__t.html  classcore_1_1scoped__wake__t-members.html  classcore_1_1scoped__wake__t.html  classcore_1_1waiter__t-members.html  classcore_1_1waiter__t.html  classes.html  classhomework13_1_1circle__t-members.html  classhomework13_1_1circle__t.html  classhomework13_1_1console__file__t-members.html  classhomework13_1_1console__file__t.html  classhomework13_1_1console__view__t-members.html  classhomework13_1_1console__view__t.html  classhomework13_1_1custom__circle__t-members.html  classhomework13_1_1custom__circle__t.html  classhomework13_1_1custom__document__t-members.html  classhomework13_1_1custom__document__t.html  (+141 more)
cmake/: CopyTargetPrerequisites.cmake.in  CppOtusAddSubdirectory.cmake  CppOtusHelpers.cmake  CppOtusTests.cmake  package_file_name.bat.template  package_file_name.sh.template
import/: build_boost_1_78_vs2022.bat
include/: cpp_otus_config.h
lesson01/: CMakeLists.txt  main.cpp
lesson01a/: CMakeLists.txt  main.cpp
search/: all_0.js  all_1.js  all_10.js  (+77 more)
src/: CMakeLists.txt  doxygen.conf.in
src/bulk/: CMakeLists.txt  implementation.cpp  interface.h
src/core/: CMakeLists.txt  README.md  doxygen.conf.in  utils.cpp
src/core/include/core/: core.h  fake_heap.h  fake_heap_allocator.h  fake_heap_helpers.h  ipv4.h  matrix.h  ringbuffer.h  utils.h  waiter.h
src/core/src/: CMakeLists.txt  fake_heap.cpp  ipv4.cpp  utils.cpp  waiter.cpp
src/core/test/: CMakeLists.txt  main.cpp  test_fake_heap.cpp  test_ipv4.cpp  test_matrix.cpp  test_rindbuffer.cpp  test_utils.cpp  test_waiter.cpp
src/homework01/: CMakeLists.txt  main.cpp
src/homework01/ctest/: CMakeLists.txt
src/homework01/gtest/: CMakeLists.txt  gtest_homework01.cpp
src/homework01a/: CMakeLists.txt  ip_filter.cpp
src/homework03/: CMakeLists.txt  main.cpp
src/homework03a/: CMakeLists.txt  main.cpp
src/homework03b/: CMakeLists.txt  main.cpp
src/homework06_alloc/: CMakeLists.txt  fake_heap.cpp  fake_heap_allocator.h  main.cpp
src/homework11/: CMakeLists.txt
src/homework11/num1000/: CMakeLists.txt  main.cpp
src/homework11/num1001/: CMakeLists.txt  main.cpp
src/homework11/num1197/: main.cpp
src/homework11/num1293/: CMakeLists.txt
src/homework11/num1787/: main.cpp
src/homework11/num1820/: main.cpp
src/homework11/num1880/: main.cpp
src/homework11/num2001/: main.cpp
src/homework11/num2012/: main.cpp
src/homework11/num2066/: main.cpp
src/homework11/num2100/: main.cpp
src/homework11_sfinae/: CMakeLists.txt  main.cpp
src/homework13_interfaces/: CMakeLists.txt  application_specific.h  custom.h  implementation.cpp  interface.h  main.cpp  sketch.h
src/homework15_operators/: CMakeLists.txt  main.cpp
src/homework17_commands/: CMakeLists.txt  implementation.cpp  interface.h  main.cpp
src/homework21_boost/: CMakeLists.txt  file_utils.cpp  file_utils.h  initializer.cpp  initializer.h  main.cpp
src/homework21_boost/example/: example7.txt
src/homework25_async/: CMakeLists.txt  leaders_followers.cpp  leaders_followers.h  logger.cpp  logger.h  main.cpp  threadsafe_writer.cpp  threadsafe_writer.h  writer_pool.cpp  writers_pool.h
src/homework25_async/lib/: CMakeLists.txt  async.cpp  async.h
src/lesson01_cmake_basic/: CMakeLists.txt
src/lesson01_cmake_generator/: CMakeLists.txt  main.cpp
src/lesson01_cmake_lib/: CMakeLists.txt  main.cpp
src/lesson01a/: CMakeLists.txt  main.cpp
src/lesson01b/: CMakeLists.txt
src/lesson03/: CMakeLists.txt
src/lesson03_braced_init/: main.cpp
src/lesson03_decltype/: CMakeLists.txt
src/lesson03_deducing_types/: main.cpp
src/lesson03_explicit/: CMakeLists.txt
src/lesson03_functor/: main.cpp
src/lesson03_move/: CMakeLists.txt  main.cpp
src/lesson03_nrvo/: CMakeLists.txt  main.cpp
src/lesson03_tuple/: main.cpp
src/lesson03_vtempl/: main.cpp
src/lesson03a/: CMakeLists.txt  main.cpp
src/lesson03b/: CMakeLists.txt  main.cpp
src/lesson03c/: CMakeLists.txt  main.cpp
src/lesson03d/: CMakeLists.txt  main.cpp
src/lesson03e/: CMakeLists.txt
src/lesson03f/: CMakeLists.txt  main.cpp
src/lesson03g/: CMakeLists.txt
src/lesson04/: main.cpp
src/lesson04_cpp1x_innovations/: main.cpp
src/lesson05/: main.cpp
src/lesson05_mleak_ctor/: main.cpp
src/lesson06_alloc/: CMakeLists.txt  main.cpp
src/lesson06_pmr/: CMakeLists.txt  main.cpp
src/lesson07/: CMakeLists.txt  main.cpp
src/lesson07_sfinae/: main.cpp
src/lesson15_copy_direct_initialization/: main.cpp
src/lesson23_thread/: CMakeLists.txt  main.cpp
src/lesson23_thread_stable/: CMakeLists.txt  main.cpp
src/lesson27_atomic/: CMakeLists.txt  main.cpp
src/timus/num1001/: main.cpp
src/timus/num1020/: main.cpp
src/timus/num1087/: main.cpp  sample.txt
src/timus/num1197/: sample.txt
src/timus/num1214/: main.cpp
src/timus/num1220/: main.cpp  sample.txt
src/timus/num1264/: main.cpp
src/timus/num1272/: main.cpp  sample.txt
src/timus/num1293/: main.cpp
src/timus/num1295/: main.cpp
src/timus/num1409/: main.cpp
src/timus/num1506/: main.cpp  sample.txt
src/timus/num1528/: main.cpp  sample.txt
src/timus/num1785/: main.cpp
src/timus/num1786/: main.cpp
src/timus/num1877/: main.cpp
src/timus/num2100/: main.cpp
(+10 files in other folders)
